--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Scanner - Support</title>
+    <title>Book Scan - Support</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -36,13 +36,13 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">📚 Book Scanner</div>
+        <div class="logo">📚 Book Scan</div>
         <h1>Support & Help</h1>
         <p>AI-Powered Book Analysis App</p>
     </div>
 
     <div class="section">
-        <h2>How to Use Book Scanner</h2>
+        <h2>How to Use Book Scan</h2>
         <div class="feature">
             <strong>1. Scan Books:</strong> Point your camera at any book barcode to scan it instantly.
         </div>
@@ -78,7 +78,7 @@
     </div>
 
     <footer style="text-align: center; margin-top: 40px; color: #666;">
-        <p>&copy; 2025 Book Scanner. All rights reserved.</p>
+        <p>&copy; 2025 Book Scan. All rights reserved.</p>
     </footer>
 </body>
 </html>
